unrecognized input -- useful for substituting data in the
middle of a stream.

Fixed a very obscure bug in rpict that caused a dark horizontal
line in certain cylindrical projections due to improper drawing
of the sky dome source in rt/srcdraw.c.

Fixed problems with effective ray lenths computed for dielectric
and BRTDfunc materials.  This was most evident in breakup of holodeck
views when VDISTANCE=True.

Fixed rad so that 'scene' variable may consist only of inline commands.

Fixed bug introduced in shadow caching routines where sources in the
middle of spheres were not illuminating properly.  Thanks to Guilio
Antonutto for spotting this problem.

Modified gensky behavior so if time is given with standard time zone
designation, any -m option is ignored.

Added -n option to mkillum for (shared memory) parallel processing.

Fixed a long-standing bug in parallel processing code that only
seemed to manifest with the new mkillum -n option, where rtrace
would deadlock upon termination.  The reason it never showed up
before is because I always closed processes in the reverse order
of opening them in other programs.  I went through and found similar
(potential) bugs in the rview device subprocess code and util/netproc.c.

Corrected the normalization of the Gaussian reflectance model.  This will
cause an increase in specularity for low-lying light sources.
Thanks to Don Walters of Boeing and Arne Duer of the Univ. of Innsbruck
for pointing out this error.  The square root used for the two cosines
in the denominator of the normalization factor should not be present.
This was a serious mistake I made in the original model, which went
undiscovered (at least to my knowledge) for over a decade.  I think
Bruce Walter of Cornell may have known about it, but I never heard
the details of his discovery.

Enabled the -p option for primary conversion without tone-mapping
in ra_bmp.  Also provides for XYZE input conversion to RGB.